fixed overflow-y

--- a/src/scss/layout/app/_about.scss
+++ b/src/scss/layout/app/_about.scss
@@ -13,6 +13,7 @@
       text-transform: uppercase;
       font-size: 1.4rem;
       color: rgba(31, 182, 122, 0.5);
+      letter-spacing: 1.6px;
     }
   
     p {
