--- a/src/scss/layout/app/_books.scss
+++ b/src/scss/layout/app/_books.scss
@@ -7,7 +7,7 @@
 .container-books {
   width: 100vw;
   padding: 3em 10vw;
-  display: grid;
+  display: none;
   gap: 3em 2.5em;
   grid-template-columns: repeat(auto-fit, minmax(18vw, 1fr));
   min-height: 80vh;
