--- a/src/scss/layout/app/_filters.scss
+++ b/src/scss/layout/app/_filters.scss
@@ -8,9 +8,11 @@
   justify-content: space-evenly;
 
   h4 {
-    font-size: 1.7rem;
-    font-weight: 100;
-    color: rgba(31, 182, 122, 0.8);
+    font-size: 1.4rem;
+    
+    color: rgba(31, 182, 122, 0.5);
+    text-transform: uppercase;
+    letter-spacing: 1.6px;
   }
 
   //
